@@ -19,12 +19,6 @@
 
 // 22.2.2.2.1  num_put members
 
-// On Solaris 9/x86 and 32-bit Solaris 10/x86 before update 10, this test
-// crashes in libc.  Inside libstdc++, we call sprintf like so:
-//   sprintf (buffer, "%.*f", 1000, 1.0)
-// which crashes.
-// { dg-xfail-run-if "" i?86-*-solaris2.9 }
-
 #include <locale>
 #include <sstream>
 #include <testsuite_hooks.h>
