@@ -23,12 +23,6 @@
 #include <sstream>
 #include <testsuite_hooks.h>
 
-// On Solaris 9 and 32-bit Solaris 10/x86 before update 10, this test crashes
-// in libc.  Inside libstdc++, we call sprintf like so:
-//   sprintf (buffer, "%.*f", 1000, 1.0)
-// which crashes.
-// { dg-do run { xfail { i?86-*-solaris2.9 } } } 
-
 // libstdc++/14220
 void test01()
 {
